<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="EnterZipcode">Enter Zip code</string>
    <string name="EnterHere">Enter here</string>
    <string name="Find">Find</string>
    <string name="title_activity_welcome">Weather</string>
    <string name="title_activity_weather__zip_code_search">Weather_ZipCodeSearch</string>
    <string name="title_activity_search_weather_by_zip">Weather Search By Zipcode</string>
    <string name="title_activity_search_weather_language_marathi">पिन हवामान शोधा</string>
    <string name="day1">Day1</string>
    <string name="day2">Day2</string>
    <string name="day3">Day3</string>
    <string name="SearchedResult">Searched Result</string>
    <string name="WeatherImage">Weather Image</string>
    <string name="title_activity_default_weather">Today\'s Weather</string>
    <string name="searchByZipCode">Search By Zip Code</string>
    <string name="Longitute">Longitute:</string>
    <string name="Latitude">Latitude:</string>
    <string name="Location">Location:</string>
    <string name="DisplayImage">Display Image</string>
    <string name="EnterZipcode1">पिन कोड प्रविष्ट करा</string>
    <string name="EnterHere1">येथे प्रविष्ट करा</string>
    <string name="Find1">शोध लागणे</string>
    <string name="title_activity_search_weather_by_language__marathi">पिन हवामान शोधा</string>
    <string name="SearchWeatherInMarathi_language">Weather In Marathi Language</string>
    <string name="SearchedResult_marathi">शोधलेले निकाल</string>
    <string name="city_marathi">शहर:</string>
    <string name="High_marathi">कमाल :</string>
    <string name="Low_marathi">किमान :</string>
    <string name="condition_marathi">अट :</string>
    <string name="title_activity_setting">Setting</string>
    <string-array name="NoOfDays_spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
      <string name="SelectDays">Select no of days for which you want to see wether :</string>
    <string name="four">4</string>
     <string name="three">3</string>
       <string name="day4">Day4</string>
        <string name="SelectTempUnit">Select Temperature Unit:</string>
      <string name="celsius">Celsius</string>
        <string name="fahrenheit">Fahrenheit</string>    

</resources>