<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectDays"
        android:textSize="20sp" >
    </TextView>

    <Button
        android:id="@+id/Nodays"
        android:layout_width="400sp"
        android:layout_height="wrap_content"
        android:paddingLeft="40dip"
        
        android:text="@string/four" />

    <Button
        android:id="@+id/Nodays3"
        android:layout_width="400sp"
        android:layout_height="wrap_content"
        android:padding="4dip"
        android:text="@string/three" />

    <TextView
        android:id="@+id/tempUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectTempUnit"
        android:textSize="20sp" >
    </TextView>

    <Button
        android:id="@+id/celsius"
        android:layout_width="400sp"
        android:layout_height="wrap_content"
        android:padding="4dip"
        android:paddingLeft="20sp"
        android:text="@string/celsius" />

    <Button
        android:id="@+id/fahrenheit"
        android:layout_width="400sp"
        android:layout_height="wrap_content"
        android:padding="4dip"
        android:paddingLeft="20sp"
        android:text="@string/fahrenheit" />

</LinearLayout>