<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Latitude"
        android:textSize="20sp" >
    </TextView>

    <TextView
        android:id="@+id/Longitute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Longitute"
        android:textSize="20sp" >
    </TextView>

    <TextView
        android:id="@+id/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Location"
        android:textSize="20sp" >
    </TextView>

    <TextView
        android:id="@+id/day1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day1"
        android:textSize="20sp" >
    </TextView>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/DisplayImage"
        android:maxHeight="50dp"
        android:maxWidth="50dp" />

    <TextView
        android:id="@+id/day2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day2"
        android:textSize="20sp" >
    </TextView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/DisplayImage"
        android:maxHeight="50dp"
        android:maxWidth="50dp" />

    <TextView
        android:id="@+id/day3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day3"
        android:textSize="20sp" >
    </TextView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/DisplayImage"
        android:maxHeight="50dp"
        android:maxWidth="50dp" />
     <TextView
        android:id="@+id/day4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day4"
        android:textSize="20sp" >
    </TextView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/DisplayImage"
        android:maxHeight="50dp"
        android:maxWidth="50dp" /> 

</LinearLayout>