<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EnterZipcode" />

    <EditText
        android:id="@+id/etValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EnterHere"
        android:inputType="number" />

    <Button
        android:id="@+id/butFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Find" /> 

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>