<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SearchedResult_marathi"
            android:textSize="20sp" >
        </TextView>
		  <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_marathi"
            android:textSize="20sp" >
        </TextView>
        <TextView
            android:id="@+id/tvCity_marathi"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip" />
		
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/High_marathi"
            android:textSize="20sp" >
        </TextView>
        <TextView
            android:id="@+id/tvHigh1_marathi"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip" />
		 <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Low_marathi"
            android:textSize="20sp" >
        </TextView>
        <TextView
            android:id="@+id/tvLow1_marathi"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip" />
		 <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condition_marathi"
            android:textSize="20sp" >
        </TextView>
        <TextView
            android:id="@+id/tvCondition1_marathi"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip" />

        <ImageView
            android:id="@+id/imageView1_marathi"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/DisplayImage"
            android:maxHeight="150dp"
            android:maxWidth="150dp" />
    </LinearLayout>

</RelativeLayout>